--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         </footer>
 
     </main>
-    <script src="index.js"></script>
+    <script src="/src/index.js"></script>
 </body>
 
 </html>
