feat:change the path

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>resp web</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="index.css">
 
 </head>
 
@@ -235,7 +235,7 @@
         </footer>
 
     </main>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
