--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
             </div>
             <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/components/about/aboutus.htm">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="components/about/aboutus.htm">About</a></li>
                 <li><a href="#Services">Services</a></li>
-                <li><a href="/components/contact/contact.htm">Contact</a></li>
+                <li><a href="components/contact/contact.htm">Contact</a></li>
             </ul>
             <div>
                 <button>
@@ -37,10 +37,10 @@
 
             <div class="sidebar">
                 <ul id="respUl">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/components/about/aboutus.htm">About</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="components/about/aboutus.htm">About</a></li>
                     <li><a href="#">Services</a></li>
-                    <li><a href="/components/contact/contact.htm">Contact</a></li>
+                    <li><a href="components/contact/contact.htm">Contact</a></li>
                 </ul>
             </div>
 
