--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="components/about/aboutus.htm">About</a></li>
-                <li><a href="#Services">Services</a></li>
+                <li><a href="components/services/services.htm">Services</a></li>
                 <li><a href="components/contact/contact.htm">Contact</a></li>
             </ul>
             <div>
@@ -39,7 +39,7 @@
                 <ul id="respUl">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="components/about/aboutus.htm">About</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="components/services/services.htm">Services</a></li>
                     <li><a href="components/contact/contact.htm">Contact</a></li>
                 </ul>
             </div>
@@ -176,6 +176,9 @@
 
 
                     <div class="lapbox">
+                        <div> <img id="pcimg" src="public/images/image 18.png" height="220px" width="250px"
+                            alt="laptop">
+                    </div>
                         <p>Creating Streamlined Safeguarding Processes with OneRen</p>
                         <img src="public/images/arrow.png" alt="arrow" height="30px" width="200px">
                     </div>
@@ -184,11 +187,15 @@
                         <div> <img id="pcimg" src="public/images/image 19.png" height="220px" width="250px"
                                 alt="laptop">
                         </div>
-                        <p>Creating Streamlined Safeguarding Processes with OneRen</p>
+                        <p>What are your safeguarding responsibilities and how can you manage them?</p>
+                        <img src="public/images/arrow.png" alt="arrow" height="30px" width="200px">
                     </div>
 
                     <div class="lapbox">
-                        <p>Creating Streamlined Safeguarding Processes with OneRen</p>
+                        <div> <img id="pcimg" src="public/images/image 20.png" height="220px" width="250px"
+                            alt="laptop">
+                    </div>
+                        <p>Revamping the Membership Model with Triathlon Australia</p>
                         <img src="public/images/arrow.png" alt="arrow" height="30px" width="200px">
                     </div>
                 </div>
