--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <main class="container">
         <nav class="navbar">
             <div class="logo">
-                <img src="public/images/Logo.png" alt="Logo">
+                <img src="public/Logo.png" alt="Logo">
 
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="components/about/aboutus.htm">About</a></li>
-                <li><a href="components/services/services.htm">Services</a></li>
-                <li><a href="components/contact/contact.htm">Contact</a></li>
+                <li><a href="public/aboutus.htm">About</a></li>
+                <li><a href="public/services.htm">Services</a></li>
+                <li><a href="public/contact.htm">Contact</a></li>
             </ul>
             <div>
                 <button>
@@ -32,15 +32,15 @@
         <!-- responsive sidebar code from here--------->
 
             <div class="responsive-Img">
-                <img src="public/images/Logo.png" height="15px" width="100px" alt="Logo">
+                <img src="public/Logo.png" height="15px" width="100px" alt="Logo">
             </div>
 
             <div class="sidebar">
                 <ul id="respUl">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="components/about/aboutus.htm">About</a></li>
-                    <li><a href="components/services/services.htm">Services</a></li>
-                    <li><a href="components/contact/contact.htm">Contact</a></li>
+                    <li><a href="public/aboutus.htm">About</a></li>
+                    <li><a href="public/services.htm">Services</a></li>
+                    <li><a href="public/contact.htm">Contact</a></li>
                 </ul>
             </div>
 
@@ -61,7 +61,7 @@
                 </h2>
                 <button id="contact-btn">CONTACT US</button>
             </div>
-            <img id="heroImg" src="public/images/Illustration.png" alt="pay" height="290px" width="290px">
+            <img id="heroImg" src="public/Illustration.png" alt="pay" height="290px" width="290px">
         </div>
 
         <!-- </section> -->
@@ -74,14 +74,14 @@
             <div class="frame-1">
 
                 <div class="card-1">
-                    <img src="public/images/Icon1.png" alt="icon1" width="80px" height="70px">
+                    <img src="public/Icon1.png" alt="icon1" width="80px" height="70px">
                     <h2>Membership Organisations</h2>
                     <p>Our membership management software provides full automation of membership renewals and payments
                     </p>
                 </div>
 
                 <div class="card-1">
-                    <img src="public/images/icon2.png" alt="icon1" width="80px" height="70px">
+                    <img src="public/icon2.png" alt="icon1" width="80px" height="70px">
                     <h2>National Associations</h2>
                     <p>
                         Our membership management software provides full automation of membership renewals and payments
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="card-1">
-                    <img src="public/images/Icon3.png" alt="icon1" width="80px" height="70px">
+                    <img src="public/Icon3.png" alt="icon1" width="80px" height="70px">
                     <h2>Clubs and Groups</h2>
                     <p>
                         Our membership management software provides full automation of membership renewals and payments
@@ -101,7 +101,7 @@
 
         <div class="frame-2">
             <div id="f2-img1">
-                <img id="frame2-img1" src="public/images/Frame 35.png" alt="frame">
+                <img id="frame2-img1" src="public/Frame 35.png" alt="frame">
             </div>
             <div id="f2-content1">
                 <h1>The unseen of spending three years at Pixelgrade</h1>
@@ -124,19 +124,19 @@
             <div class="number-right">
                 <div class="nr">
 
-                    <img src="public/images/members.png" height="30px" width="40px" alt="member">
+                    <img src="public/members.png" height="30px" width="40px" alt="member">
                     <h2>22,45,341</h2>
                     <h6>member</h6>
-                    <img src="public/images/booking.png" height="30px" width="40px" alt="member">
+                    <img src="public/booking.png" height="30px" width="40px" alt="member">
                     <h2>8,28,867</h2>
                     <h6>Event booking</h6>
 
                 </div>
                 <div class="nr">
-                    <img src="public/images/club.png" height="40px" width="50px" alt="member">
+                    <img src="public/club.png" height="40px" width="50px" alt="member">
                     <h2>86,328</h2>
                     <h6>Club</h6>
-                    <img src="public/images/payments.png" height="30px" width="40px" alt="member">
+                    <img src="public/payments.png" height="30px" width="40px" alt="member">
                     <h2>1,92,341</h2>
                     <h6>payments</h6>
                 </div>
@@ -156,7 +156,7 @@
             </div>
 
             <div id="f2-img2">
-                <img id="frame2-img2" src="public/images/pana.png" alt="frame">
+                <img id="frame2-img2" src="public/pana.png" alt="frame">
             </div>
 
         </div>
@@ -176,27 +176,27 @@
 
 
                     <div class="lapbox">
-                        <div> <img id="pcimg" src="public/images/image 18.png" height="220px" width="250px"
+                        <div> <img id="pcimg" src="public/image 18.png" height="220px" width="250px"
                             alt="laptop">
                     </div>
                         <p>Creating Streamlined Safeguarding Processes with OneRen</p>
-                        <img src="public/images/arrow.png" alt="arrow" height="30px" width="200px">
+                        <img src="public/arrow.png" alt="arrow" height="30px" width="200px">
                     </div>
 
                     <div class="lapbox">
-                        <div> <img id="pcimg" src="public/images/image 19.png" height="220px" width="250px"
+                        <div> <img id="pcimg" src="public/image 19.png" height="220px" width="250px"
                                 alt="laptop">
                         </div>
                         <p>What are your safeguarding responsibilities and how can you manage them?</p>
-                        <img src="public/images/arrow.png" alt="arrow" height="30px" width="200px">
+                        <img src="public/arrow.png" alt="arrow" height="30px" width="200px">
                     </div>
 
                     <div class="lapbox">
-                        <div> <img id="pcimg" src="public/images/image 20.png" height="220px" width="250px"
+                        <div> <img id="pcimg" src="public/image 20.png" height="220px" width="250px"
                             alt="laptop">
                     </div>
                         <p>Revamping the Membership Model with Triathlon Australia</p>
-                        <img src="public/images/arrow.png" alt="arrow" height="30px" width="200px">
+                        <img src="public/arrow.png" alt="arrow" height="30px" width="200px">
                     </div>
                 </div>
 
@@ -208,9 +208,9 @@
                 <p>Copyright © 2020 Nexcent ltd.</p>
                 <p>All rights reserved</p>
                 <div>
-                    <img src="public/images/instagram.png" height="30px" width="35px" alt="instagram">
-                    <!-- <img src="public/images/twitter.png" height="20px" width="20px" alt="twitter"> -->
-                    <img src="public/images/youtube.png" height="30px" width="30px" alt="youtube">
+                    <img src="public/instagram.png" height="30px" width="35px" alt="instagram">
+                    <!-- <img src="public/twitter.png" height="20px" width="20px" alt="twitter"> -->
+                    <img src="public/youtube.png" height="30px" width="30px" alt="youtube">
                 </div>
             </div>
 
@@ -235,7 +235,7 @@
                 <div class="uptodate">
                     <h4>Stay Up to date</h4>
                     <input id="footer-email" type="email" placeholder="Your Email Address">
-                    <img src="public/images/send.png" height="15px" width="17px" alt="send">
+                    <img src="public/send.png" height="15px" width="17px" alt="send">
                 </div>
 
             </div>
