--- a/public/services.htm
+++ b/public/services.htm
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AboutUs</title>
-    <link rel="stylesheet" href="./aboutus.css">
+    <title>Services</title>
+    <link rel="stylesheet" href="services.css">
 </head>
 
 <body>
@@ -13,14 +13,14 @@
 
         <nav class="navbar">
             <div class="logo">
-                <img src="/public/images/Logo.png" alt="Logo">
+                <img src="Logo.png" alt="Logo">
 
             </div>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/components/about/aboutus.htm">About</a></li>
-                <li><a href="/components/services/services.htm">Services</a></li>
-                <li><a href="/components/contact/contact.htm">Contact</a></li>
+                <li><a href="aboutus.htm">About</a></li>
+                <li><a href="services.htm">Services</a></li>
+                <li><a href="contact.htm">Contact</a></li>
             </ul>
             <div>
                 <button>
@@ -31,15 +31,15 @@
          <!-- responsive sidebar code from here--------->
 
          <div class="responsive-Img">
-            <img src="/public/images/Logo.png" height="15px" width="100px" alt="Logo">
+            <img src="Logo.png" height="15px" width="100px" alt="Logo">
         </div>
 
         <div class="sidebar">
             <ul id="respUl">
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/components/about/aboutus.htm">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="/components/contact/contact.htm">Contact</a></li>
+                <li><a href="aboutus.htm">About</a></li>
+                <li><a href="services.htm">Services</a></li>
+                <li><a href="contact.htm">Contact</a></li>
             </ul>
         </div>
 
@@ -48,8 +48,8 @@
         </div>
 
         
-        <div class="about">
-        <h2>About Us</h2>
+        <div class="services">
+        <h2>Services</h2>
             <p>If you're just getting started or searching for a change, you've come to the correct spot. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat optio et adipisci maxime? Aut et repudiandae doloremque reprehenderit non! Ut mollitia possimus ipsa blanditiis a doloremque architecto est ratione unde? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum iste aut cumque officia iusto eaque, ipsam deserunt. Recusandae cupiditate, libero placeat eius atque voluptatibus enim ea quibusdam, magnam, necessitatibus officia. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati suscipit magnam blanditiis velit odit quasi culpa neque praesentium cumque earum reprehenderit minima quis eius quos sapiente incidunt, consectetur quisquam enim.</p>
         </div>
             
