--- a/public/contact.htm
+++ b/public/contact.htm
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact</title>
-    <link rel="stylesheet" href="./contact.css">
+    <link rel="stylesheet" href="contact.css">
 </head>
 
 <body>
     <main class="container">
         <nav class="navbar">
             <div class="logo">
-                <img src="/public/images/Logo.png" alt="Logo">
+                <img src="Logo.png" alt="Logo">
 
             </div>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/components/about/aboutus.htm">About</a></li>
-                <li><a href="/components/services/services.htm">Services</a></li>
-                <li><a href="/components/contact/contact.htm">Contact</a></li>
+                <li><a href="aboutus.htm">About</a></li>
+                <li><a href="services.htm">Services</a></li>
+                <li><a href="contact.htm">Contact</a></li>
             </ul>
             <div>
                 <button>
@@ -32,15 +32,15 @@
         <!-- responsive sidebar code from here--------->
 
         <div class="responsive-Img">
-            <img src="/public/images/Logo.png" height="15px" width="100px" alt="Logo">
+            <img src="Logo.png" height="15px" width="100px" alt="Logo">
         </div>
 
         <div class="sidebar">
             <ul id="respUl">
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/components/about/aboutus.htm">About</a></li>
-                <li><a href="/components/services/services.htm">Services</a></li>
-                <li><a href="/components/contact/contact.htm">Contact</a></li>
+                <li><a href="aboutus.htm">About</a></li>
+                <li><a href="services.htm">Services</a></li>
+                <li><a href="contact.htm">Contact</a></li>
             </ul>
         </div>
 
@@ -67,7 +67,7 @@
             </form>
 
             <div class="contact-img">
-                <img id="contact-img" src="/public/images/contact.svg" height="450px" width="500px" alt="contact image">
+                <img id="contact-img" src="contact.svg" height="450px" width="500px" alt="contact image">
             </div>
 
 
