--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main class="container">
         <nav class="navbar">
             <div class="logo">
-                <img src="public/Logo.png" alt="Logo">
+                <a href="/index.html"><img src="public/Logo.png" alt="Logo"></a>
 
             </div>
             <ul>
@@ -32,7 +32,7 @@
         <!-- responsive sidebar code from here--------->
 
             <div class="responsive-Img">
-                <img src="public/Logo.png" height="15px" width="100px" alt="Logo">
+                <a href="/index.html"><img src="public/Logo.png" height="20px" width="140px" alt="Logo"></a>
             </div>
 
             <div class="sidebar">
@@ -45,7 +45,7 @@
             </div>
 
             <div class="sidebar-btn">
-                <button id='toggleButton' onclick="openSideBar()">☰</button>
+                <button id='toggleButton' onclick="openSideBar()" style="font-size: 22px; background-color: rgb(255, 255, 255); color: black;">&#9776;</button>
             </div>
 
 
@@ -59,7 +59,7 @@
             <div class="heading">
                 <h2>An entirely new visual experience for wireless POS devices Helping a local business reinvent itself
                 </h2>
-                <button id="contact-btn">CONTACT US</button>
+                <a href="/public/contact.htm" style="text-decoration:none;"><button id="contact-btn">CONTACT US</button></a>
             </div>
             <img id="heroImg" src="public/Illustration.png" alt="pay" height="290px" width="290px">
         </div>
@@ -216,7 +216,7 @@
 
 
             <div class="footer-2">
-                <div class="company">
+                <div class="company">                  
                     <h4>company</h4>
                     <h6>About us</h6>
                     <h6>Blog</h6>
