--- a/public/aboutus.htm
+++ b/public/aboutus.htm
@@ -13,7 +13,7 @@
 
         <nav class="navbar">
             <div class="logo">
-                <img src="Logo.png" alt="Logo">
+                <a href="/index.html"><img src="Logo.png" alt="Logo"></a>
 
             </div>
             <ul>
@@ -31,7 +31,7 @@
         <!-- responsive sidebar code from here--------->
 
         <div class="responsive-Img">
-            <img src="Logo.png" height="15px" width="100px" alt="Logo">
+            <a href="/index.html"><img src="Logo.png" height="20px" width="140px" alt="Logo"></a>
         </div>
 
         <div class="sidebar">
@@ -44,7 +44,8 @@
         </div>
 
         <div class="sidebar-btn">
-            <button id='toggleButton' onclick="openSideBar()">☰</button>
+            <button id='toggleButton' onclick="openSideBar()"
+                style="font-size: 22px; background-color: rgb(255, 255, 255); color: black;">&#9776;</button>
         </div>
 
 
@@ -65,21 +66,11 @@
     <script>
         // responsive sidebar script
         let openSideBar = () => {
+            let sidebar = document.querySelector('.sidebar');
+            sidebar.classList.toggle('open');
+
             let body = document.querySelector('body');
             body.classList.toggle('no-scroll');
-
-            let sidebar = document.querySelector('.sidebar');
-            if (sidebar.style.display === 'none' || sidebar.style.display === '') {
-                sidebar.style.display = 'flex';
-
-            }
-            else if (sidebar.style.display === 'flex') {
-                sidebar.style.display = 'none';
-            }
-            else {
-                sidebar.style.display = 'none';
-            }
-
         }
 
 
