--- a/contact.htm
+++ b/contact.htm
@@ -12,10 +12,10 @@
     <main class="container">
         <nav class="navbar">
             <div class="logo">
-                <a href="/index.html"><img src="Logo.png" alt="Logo"></a>
+                <a href="index.html"><img src="/public/Logo.png" alt="Logo"></a>
             </div>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.htm">About</a></li>
                 <li><a href="services.htm">Services</a></li>
                 <li><a href="contact.htm">Contact</a></li>
@@ -31,12 +31,12 @@
         <!-- responsive sidebar code from here--------->
 
         <div class="responsive-Img">
-            <a href="/index.html"><img src="Logo.png" height="20px" width="140px" alt="Logo"></a>
+            <a href="index.html"><img src="/public/Logo.png" height="20px" width="140px" alt="Logo"></a>
         </div>
 
         <div class="sidebar">
             <ul id="respUl">
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.htm">About</a></li>
                 <li><a href="services.htm">Services</a></li>
                 <li><a href="contact.htm">Contact</a></li>
@@ -67,7 +67,7 @@
             </form>
 
             <div class="contact-img">
-                <img id="contact-img" src="contact.svg" height="450px" width="500px" alt="contact image">
+                <img id="contact-img" src="/public/contact.svg" height="450px" width="500px" alt="contact image">
             </div>
 
 
