--- a/index.html
+++ b/index.html
@@ -13,40 +13,39 @@
     <main class="container">
         <nav class="navbar">
             <div class="logo">
-                <a href="/index.html"><img src="public/Logo.png" alt="Logo"></a>
+                <a href="index.html"><img src="public/Logo.png" alt="Logo"></a>
 
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="public/aboutus.htm">About</a></li>
-                <li><a href="public/services.htm">Services</a></li>
-                <li><a href="public/contact.htm">Contact</a></li>
+                <li><a href="aboutus.htm">About</a></li>
+                <li><a href="services.htm">Services</a></li>
+                <li><a href="contact.htm">Contact</a></li>
             </ul>
             <div>
-                <button>
-                    SignUp
-                </button>
+                <a href="contact.htm" style="text-decoration:none;"><button>SignUp</button></a>
             </div>
         </nav>
 
         <!-- responsive sidebar code from here--------->
 
-            <div class="responsive-Img">
-                <a href="/index.html"><img src="public/Logo.png" height="20px" width="140px" alt="Logo"></a>
-            </div>
+        <div class="responsive-Img">
+            <a href="index.html"><img src="public/Logo.png" height="20px" width="140px" alt="Logo"></a>
+        </div>
 
-            <div class="sidebar">
-                <ul id="respUl">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="public/aboutus.htm">About</a></li>
-                    <li><a href="public/services.htm">Services</a></li>
-                    <li><a href="public/contact.htm">Contact</a></li>
-                </ul>
-            </div>
+        <div class="sidebar">
+            <ul id="respUl">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.htm">About</a></li>
+                <li><a href="services.htm">Services</a></li>
+                <li><a href="contact.htm">Contact</a></li>
+            </ul>
+        </div>
 
-            <div class="sidebar-btn">
-                <button id='toggleButton' onclick="openSideBar()" style="font-size: 22px; background-color: rgb(255, 255, 255); color: black;">&#9776;</button>
-            </div>
+        <div class="sidebar-btn">
+            <button id='toggleButton' onclick="openSideBar()"
+                style="font-size: 22px; background-color: rgb(255, 255, 255); color: black;">&#9776;</button>
+        </div>
 
 
 
@@ -54,12 +53,13 @@
 
 
         <!-- <section id="HOME"> -->
-
         <div class="hero">
             <div class="heading">
-                <h2>An entirely new visual experience for wireless POS devices Helping a local business reinvent itself
+                <h2>An entirely new visual experience for wireless POS devices Helping a local business reinvent
+                    itself
                 </h2>
-                <a href="/public/contact.htm" style="text-decoration:none;"><button id="contact-btn">CONTACT US</button></a>
+                <a href="contact.htm" style="text-decoration:none;"><button id="contact-btn">CONTACT
+                        US</button></a>
             </div>
             <img id="heroImg" src="public/Illustration.png" alt="pay" height="290px" width="290px">
         </div>
@@ -176,25 +176,22 @@
 
 
                     <div class="lapbox">
-                        <div> <img id="pcimg" src="public/image 18.png" height="220px" width="250px"
-                            alt="laptop">
-                    </div>
+                        <div> <img id="pcimg" src="public/image 18.png" height="220px" width="250px" alt="laptop">
+                        </div>
                         <p>Creating Streamlined Safeguarding Processes with OneRen</p>
                         <img src="public/arrow.png" alt="arrow" height="30px" width="200px">
                     </div>
 
                     <div class="lapbox">
-                        <div> <img id="pcimg" src="public/image 19.png" height="220px" width="250px"
-                                alt="laptop">
+                        <div> <img id="pcimg" src="public/image 19.png" height="220px" width="250px" alt="laptop">
                         </div>
                         <p>What are your safeguarding responsibilities and how can you manage them?</p>
                         <img src="public/arrow.png" alt="arrow" height="30px" width="200px">
                     </div>
 
                     <div class="lapbox">
-                        <div> <img id="pcimg" src="public/image 20.png" height="220px" width="250px"
-                            alt="laptop">
-                    </div>
+                        <div> <img id="pcimg" src="public/image 20.png" height="220px" width="250px" alt="laptop">
+                        </div>
                         <p>Revamping the Membership Model with Triathlon Australia</p>
                         <img src="public/arrow.png" alt="arrow" height="30px" width="200px">
                     </div>
@@ -216,7 +213,7 @@
 
 
             <div class="footer-2">
-                <div class="company">                  
+                <div class="company">
                     <h4>company</h4>
                     <h6>About us</h6>
                     <h6>Blog</h6>
