--- a/services.htm
+++ b/services.htm
@@ -13,11 +13,11 @@
 
         <nav class="navbar">
             <div class="logo">
-                <a href="/index.html"><img src="Logo.png" alt="Logo"></a>
+                <a href="index.html"><img src="/public/Logo.png" alt="Logo"></a>
 
             </div>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.htm">About</a></li>
                 <li><a href="services.htm">Services</a></li>
                 <li><a href="contact.htm">Contact</a></li>
@@ -31,12 +31,12 @@
         <!-- responsive sidebar code from here--------->
 
         <div class="responsive-Img">
-            <a href="/index.html"><img src="Logo.png" height="20px" width="140px" alt="Logo"></a>
+            <a href="index.html"><img src="/public/Logo.png" height="20px" width="140px" alt="Logo"></a>
         </div>
 
         <div class="sidebar">
             <ul id="respUl">
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.htm">About</a></li>
                 <li><a href="services.htm">Services</a></li>
                 <li><a href="contact.htm">Contact</a></li>
