--- a/contact.htm
+++ b/contact.htm
@@ -31,7 +31,7 @@
         <!-- responsive sidebar code from here--------->
 
         <div class="responsive-Img">
-            <a href="index.html"><img src="/public/Logo.png" height="20px" width="140px" alt="Logo"></a>
+            <a href="index.html"><img src="public/Logo.png" height="20px" width="140px" alt="Logo"></a>
         </div>
 
         <div class="sidebar">
